<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TutorTrack</string>
    <string name="action_settings">Settings</string>
    <string name="add_appointment">Add Appointment</string>
    <string name="appointments">Appointments</string>
    <string name="edit_timeslot">Edit Timeslots</string>
    <string name="hello_world">Hello world!</string>
    <string name="logged_in_as">Logged in as: </string>
    <string name="login_as_student">Student Login</string>
    <string name="login_as_tutor">Tutor Login</string>
    <string name="login_as_admin">Administrator Login</string>
    <string name="login">Login</string>
    <string name="manage_appointments">Manage Appointments</string>
    <string name="password">Password:</string>
    <string name="username">Email:</string>
    <string name="edit_appointment">Edit Appointment</string>
    <string name="cancel_item">Cancel Appointment</string>
    <string name="filter">Filter</string>
    <string name="view_tutors">View Tutors</string>
    <string name="filter_type">Filter Type</string>
    <string name="logout_string">Logout</string>

    <string-array name="filter_type_array">
        <item>Location</item>
        <item>Subject</item>
    </string-array>
    
    <string-array name="location_array">
        <item>NORTH</item>
        <item>SOUTH</item>
        <item>EAST</item>
        <item>ICC</item>
    </string-array>
    
    <string-array name="test_subject_array">
        <item>Circuit Theory I</item>
        <item>Circuit Theory II</item>
        <item>Computing I</item>
        <item>Computing II</item>
    </string-array>

    <string name="add_filter">Add Filter</string>
    <string name="filters">Filters</string>
    <string name="blank_desc"></string>
    <string name="select_one">Select one of the following</string>
    <string name="welcome">Welcome to TutorTrack!</string>
    <string name="make_appointment_string">Would you like to make an appointment?</string>

</resources>