<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/student_login_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/logged_in_as"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Space
        android:id="@+id/Space4"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/student_login_status" />

    <LinearLayout
        android:id="@+id/buttonLayout_student"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/Space4"
        android:orientation="vertical" >

        <Button
            android:id="@+id/view_tutors_button"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:text="@string/view_tutors" />

        <Button
            android:id="@+id/manage_appointments_button2"
            style="@style/ButtonText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button"
            android:text="@string/manage_appointments" />

        <Space
            android:id="@+id/Space5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>