<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent" >

    <TextView
        android:id="@+id/filterTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/filters"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/filtersLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/filterTextView"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        android:weightSum="1" >

        <Spinner
            android:id="@+id/filter_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:entries="@array/filter_type_array"
            android:prompt="@string/filter_type" />

        <Button
            android:id="@+id/add_filter_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:padding="10dp"
            android:text="@string/add_filter" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/filters_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonsOKCancelLayout"
        android:layout_below="@id/filtersLayout"
        android:background="#CCCCCC"
        android:padding="5dp"
        android:scrollbars="vertical" >

        <LinearLayout
            android:id="@+id/filters_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_above="@id/buttonsOKCancelLayout"
        android:layout_marginTop="5dp"
        android:background="?android:attr/dividerVertical" />

    <LinearLayout
        android:id="@id/buttonsOKCancelLayout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/filters_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/cancel" />

        <Button
            android:id="@+id/filters_ok"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@android:string/ok" />
    </LinearLayout>

</RelativeLayout>